Correct odd menu spacing
Removing this width corrects odd menu spacing on both Firefox desktop and mobile.

--- a/theme/zeta.css
+++ b/theme/zeta.css
@@ -228,7 +228,6 @@ color:#688b6a;
 display:block;
 padding:4px .25em;
 position:relative;
-width:9em;
 }
 
 .drop_menu a:hover {
